# ISBN_Maker

./: .gitignore  README.md  build.py  convert_icon.py  isbn_barcode_generator.spec  pyproject.toml  run_app.py  version_info.txt
.github/workflows/: release.yml
src/isbn_barcode_generator/: __init__.py  main.py
src/isbn_barcode_generator/core/: __init__.py  addon_encoder.py  batch_processor.py  encoder.py  renderer.py  template_manager.py  validator.py
src/isbn_barcode_generator/gui/: __init__.py  main_window.py
tests/: __init__.py  test_addon_encoder.py  test_batch_processor.py  test_encoder.py  test_renderer.py  test_template_manager.py  test_validator.py
